--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageCreerEvenement.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageCreerEvenement.xhtml
@@ -4,7 +4,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <h:body>
 
@@ -21,34 +22,154 @@
                             <h4>Creer un evenement</h4>
 
                             <h:form>
-                                <h:outputText value="Titre :"/>
-                                <h:inputText class="form-control" value="#{newEvent.titre}" />
-                                <h:outputText value="Prix :"/>
-                                <h:inputText class="form-control" value="#{newEvent.prix}" />
-                                <h:outputText value="Nombre de participant :"/>
-                                <h:inputText class="form-control" value="#{newEvent.nbParticipant}" />
-                                <h:outputText value="Date de début :"/>
-                                <p:calendar value="#{newEvent.dateDebut}" id="popupButtonCal" showOn="button" /> 
-                                <h:outputText value="Date de fin :"/>
-                                <p:calendar value="#{newEvent.dateFin}" id="popupButtonCal2" showOn="button" /> 
-                                <h:outputText value="Description :"/>
-                                <h:inputTextarea class="form-control" rows="4" value="#{newEvent.description}" />
-                                <h:outputText value="Rue :"/>
-                                <h:inputText class="form-control" value="#{newEvent.rue}" />
-                                <h:outputText value="Adresse :"/>
-                                <h:inputText class="form-control" value="#{newEvent.adresse}" />
-                                <h:outputText value="Code postal :"/>
-                                <h:inputText class="form-control" value="#{newEvent.cp}" />
-                                <h:outputText value="Ville :"/>
-                                <h:inputText class="form-control" value="#{newEvent.ville}" /> 
 
-                                <h:commandButton value="Créer l'évènement" action="#{managerEvenement.createEvent(newEvent)}"/>
+                                <div class="panel-body">
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <h6>Description</h6>
+                                            <hr/>
+                                        </div>
+                                        <div class ="row">
+                                            <div class="col-md-5">
+                                                <label>Titre : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.titre}" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Prix : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.prix}" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Nombre de participant : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.nbParticipant}" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Date de début : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <p:calendar value="#{newEvent.dateDebut}" id="popupButtonCal" showOn="button" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Date de fin : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <p:calendar value="#{newEvent.dateFin}" id="popupButtonCal2" showOn="button" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Description : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputTextarea class="form-control" rows="4" value="#{newEvent.description}" />
+                                            </div>
+                                        </div>
+                                        <br/>
+                                    </div>
+                                    <div class="col-md-1"/>
+                                    <div class="col-md-5">
+                                        <div class="row">
+                                            <h6>Lieu</h6>
+                                            <hr/>
+                                        </div>
+                                        <div class ="row">
+                                            <div class="col-md-5">
+                                                <label>Rue : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.rue}" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Adresse : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.adresse}" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Code postal : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.cp}" />
+                                            </div>
+                                        </div><br/>
+                                        <div class="row">
+                                            <div class="col-md-5">
+                                                <label>Vile : </label>
+                                            </div>
+                                            <div class="col-md-7">
+                                                <h:inputText class="form-control" value="#{newEvent.ville}" />
+                                            </div>
+                                        </div>
+                                    </div>
 
+                                </div>
+
+                                <div class="panel-body">
+                                    <div class="col-md-5"/>
+                                    <div class="col-md-2">
+                                        <div class="row">
+                                            <c:choose>
+                                                <c:when test="#{managerUser.user.id == null}">
+                                                    <p:commandLink styleClass="btn btn-default" id="modalDialogButton" value="Connexion" onclick= "dlgEspacePerso.show();" type="button"/>
+                                                </c:when>
+                                                <c:otherwise>
+                                                    <h:commandButton class="btn btn-default" value="Créer l'évènement" action="#{managerEvenement.createEvent(newEvent,managerUser.user)}"/>
+                                                </c:otherwise>
+                                            </c:choose>
+                                            <p:dialog id="modalDialog" header="Connexion" widgetVar="dlgEspacePerso" modal="true" height="180" >
+                                                <h:form>
+                                                    <div class ="row" style="margin-top:20px ">
+                                                        <div class="col-md-5">
+                                                            <label>Login : </label>
+                                                        </div>
+                                                        <div class="col-md-7">
+                                                            <h:inputText class="form-control" value="#{connectedUser.login}" />
+                                                        </div>
+                                                    </div><br/>
+                                                    <div class="row">
+                                                        <div class="col-md-5">
+                                                            <label>Password : </label>
+                                                        </div>
+                                                        <div class="col-md-7">
+                                                            <h:inputText class="form-control" value="#{connectedUser.password}" />
+                                                        </div>
+                                                    </div><br/>
+                                                    <h:commandButton action="#{managerUser.verifAuthentification(connectedUser)}" value="Se Connecter" styleClass="btn btnConnexion" /></h:form>
+                                            </p:dialog>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5"/>
+                                </div>
+                                                                        
                             </h:form>
+
                         </div>
+
                     </div>
+
                 </div>
+
             </ui:define>
+
         </ui:composition>
+
     </h:body>
+
 </html>
