--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageAdmin.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageAdmin.xhtml
@@ -101,9 +101,8 @@
                             <div id="collapseThree" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <div class="col-md-6">
-                                        <h:form>
+                                        <h:form id="idFormType">
                                             <div class ="row">
-
                                                 <div class="col-md-2">
                                                     <label>Nom : </label>
                                                 </div>
@@ -113,16 +112,25 @@
                                                 <div class="col-md-3">
                                                     <h:commandButton class="btn btn-default" value="Ajouter" action="#{managerAdmin.createTypeProduit(newTypeProduit)}"/> 
                                                 </div>          
-                                            </div>
-                                            <br/>
+                                            </div><br/>
+                                            <div class ="row">
+                                                <div class="col-md-2">
+                                                    <label>Catégorie : </label>
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h:selectOneMenu id="idCategorie" value="#{managerAdmin.selectedCategorie}" class="form-control" converter="categorieConverter">
+                                                        <f:selectItems value="#{managerAdmin.selectedItemFindAllCategorie()}" />
+                                                    </h:selectOneMenu>
+                                                </div>
+                                            </div><br/>
                                             <div class ="row">
                                                 <div class="col-md-2">
                                                     <label>Saison : </label>
                                                 </div>
                                                 <div class="col-md-7">
-                                                    <h:selectManyListbox value="#{managerAdmin.selectedSaisonForType}" class="form-control">
+                                                    <h:selectOneMenu id="idSaison" value="#{managerAdmin.selectedSaisonForType}" class="form-control" converter="saisonConverter">
                                                         <f:selectItems value="#{managerAdmin.selectedItemFindAllSaison()}" />
-                                                    </h:selectManyListbox>
+                                                    </h:selectOneMenu>
                                                 </div>
                                             </div>
                                         </h:form>
